# MaxEngine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build_debug.cmd
Common/: BasicWindow.cpp  CMakeLists.txt  GraphicsMathHelper.cpp
Common/include/: BasicWindow.h  CMakeLists.txt  GraphicsMathHelper.h  UtilType.h
Common/src/: GraphicsMathHelper.cpp
D3D12/: CMakeLists.txt  D3D12Util.cpp  D3DApp.cpp  D3DBasicSetUp.cpp  GameTimer.cpp
D3D12/include/: CMakeLists.txt  D3D12Util.h  D3DApp.h  D3DBasicSetUp.h  GameTimer.h  UpLoadBuffer.h  d3dx12.h
D3D12/src/: CMakeLists.txt
test/: CMakeLists.txt  MyD3D.h  test.cpp
test/Shaders/: color.hlsl
